recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:4: error: identifier expected but integer literal found.
	avance(nbPas:2)
                     ^FourSquare:5: error: ')' expected but '}' found.
}
^